# spillover

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/architecture/: 01-system-context.md  02-container.md  03-component-hexagonal.md  04-sequence-hot-path.md  05-episode-lifecycle.md  06-eviction-flow.md  07-retrieval-fusion.md  08-counter-compaction.md  09-storage-schema.md  10-performance-heavy.md  11-deployment.md  12-token-economics.md  README.md
docs/eval/: README.md  analysis-barbershop-v2.0.0.md  analysis-cc-extreme-v2.2.0.md  analysis-cc-realistic-v2.1.0.md  analysis-frontend-v2.0.0.md  analysis-heavy-v1.6.0.md  analysis-v1.3.0.md  analysis-v1.4.0.md  analysis-v1.4.1.md  analysis-v1.5.1.md  analysis-v1.6.0.md  barbershop-ab-v2.0.0.jsonl  barbershop-ab-v2.0.0.md  baseline-v1.3.0.jsonl  baseline-v1.3.0.md  baseline-v1.4.0.jsonl  baseline-v1.4.0.md  baseline-v1.4.1.jsonl  baseline-v1.4.1.md  baseline-v1.5.0.jsonl  baseline-v1.5.0.md  baseline-v1.5.1.jsonl  baseline-v1.5.1.md  cc-realistic-extreme-v2.2.0.jsonl  cc-realistic-extreme-v2.2.0.md  cc-realistic-v2.1.0.jsonl  cc-realistic-v2.1.0.md  frontend-ab-v2.0.0.jsonl  frontend-ab-v2.0.0.md  heavy-stress-v1.6.0.jsonl  heavy-stress-v1.6.0.md  landing-page-logic-v1.6.0.jsonl  landing-page-logic-v1.6.0.md  long-conversation-v1.6.0.jsonl  long-conversation-v1.6.0.md  recall_dataset_template.jsonl
plugin/.claude-plugin/: CLAUDE.md  plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: ensure-proxy.sh  session-env.sh
src/spillover/: cli.py  config.py  logging.py  request_id.py
tests/: conftest.py
tests/integration/: test_chaos_recovery.py  test_counter_compact_lifecycle.py  test_eviction_lifecycle.py  test_incremental_sse_rewrite.py  test_metrics_endpoint.py  test_metrics_wired.py  test_middleware_fallback.py  test_openai_passthrough.py  test_proxy_passthrough.py  test_retriever_lifecycle.py  test_streaming_usage_rewrite.py
tests/unit/: conftest.py  test_adapter_anthropic.py  test_adapter_base.py  test_adapter_openai.py  test_adapter_response.py  test_archive_writer.py  test_bench_ab.py  test_bench_runner.py  test_budget_plan.py  test_budget_profile.py  test_causality.py  test_cli.py  test_cli_project_hash.py  test_config.py  test_detection.py  (+38 more)
(+92 files in other folders)
