[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spillover"
version = "0.1.0"
description = "Transparent LLM proxy with overflow memory architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Luiz Henrique Cavalcanti Ramos da Silva", email = "luizhcrs@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "anthropic>=0.34",
    "click>=8.1",
    "pydantic>=2.6",
    "sqlite-vec>=0.1.6",
    "kuzu>=0.8.0",
    "fastembed>=0.4",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
spillover = "spillover.cli:main"
spillover-cc = "spillover.wrappers.cc:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spillover"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
markers = [
    "slow: tests that download the embedding model (~130MB)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
